backend [1.0.0] - console [1.0.0] - split backend and console logic